--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,20 @@
-<h1>User#new</h1>
-<p>Find me in app/views/user/new.html.erb</p>
+<div class="centered">
+	<h1>Sign Up</h1>
+	<%= form_for @new_user do |f| %>
+	  <table class="center">
+		  <tr>
+			  <td><%= f.label :email %></td>
+		    <td><%= f.text_field :email %></td>
+		  </tr>
+			<tr>
+				<td><%= f.label :password %></td>
+				<td><%= f.text_field :password %></td>
+			</tr>
+			<tr>
+				<td><%= f.label :password_confirmation, 'Confirm' %></td>
+				<td><%= f.text_field :password_confirmation %></td>
+			</tr>
+			</table>
+	  <%= f.submit 'Create Account', :class => 'btn'%>
+	<% end %>
+</div>
