--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="centered">
   <h1>Fantasy Tennis</h1>
-  <a class="btn">Sign In</a> or
+  <%= link_to "Sign In", sessions_signin_path, :class => "btn"%> or
   <%= link_to "Sign Up for Free", new_user_path, :class => "btn" %>
 </div>
