Started team page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,10 @@
 @import "bootstrap";
 
+div.middle {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 div.centered {
     max-width: 600px;
     margin: 0 auto;
