--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <table>
   <% @user.teams.each do |team| %>
     <tr>
-      <td><%= team.name %></td>
+      <td><%= link_to team.name, team_path(team.id) %></td>
     </tr>
   <% end %>
 </div>
