--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -18,7 +18,7 @@
   
   <div>
     <h2>Players</h2>
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr><th>Name</th><th>Country</th><th>Ranking</th><th>Year ATP Points</th><th>Win-Loss</th></tr>
       </thead>
