Added a leagues controller. Started on league new/create

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="centered", style="clear: right;">
   <a class="btn">Join a League</a>
-  <a class="btn">Create a New League</a>
+  <%= link_to "Create a New League", new_league_path, :class => "btn" %>
   
   <h3>My Teams</h3>
   <table>
