--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Leagues#index</h1>
-<p>Find me in app/views/leagues/index.html.erb</p>
+<div class="centered">
+  <h2>Join a League</h2>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>League Name</th>
+        <th>Draft Time</th>
+        <th>Teams Filled</th>
+        <th>Players per Team</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @all_leagues.each do |league| %>
+        <tr>
+          <td><%= league.name %></td>
+          <td><%= format_draft_date(league) %></td>
+          <td><%= league.teams.count %> / <%= league.num_teams %></td>
+          <td><%= league.players_per_team %></td>
+        </tr>
+      <% end %>
+    </tbody>
+</div>
