Added the show page for teams. Added modal for joining a league

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -7,8 +7,7 @@
   </div>
   
   <div>
-    <%= link_to "View Standings", "", :class => "btn" %>
-    <%= link_to "League Info", "", :class => "btn" %>
+    <%= link_to "View League Info", league_path(@team.league), :class => "btn" %>
   </div>
   
   <div>
