--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -16,7 +16,10 @@
           <td><%= format_draft_date(league) %></td>
           <td><%= league.teams.count %> / <%= league.num_teams %></td>
           <td><%= league.players_per_team %></td>
+          <td><%= link_to "Join", league_path(league), :class => "btn" %></td>
         </tr>
       <% end %>
     </tbody>
+  </table>
+  
 </div>
