--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,2 +1,55 @@
-<h1>Leagues#show</h1>
-<p>Find me in app/views/leagues/show.html.erb</p>
+<div class="middle">
+  <div style="padding: 0px">
+    <h1><%= @league.name %></h2>
+  </div>
+  <div>
+    <h4>Teams Joined: <%= @league.teams.count %> / <%= @league.num_teams %></h4>
+    <h4>Players per Team: <%= @league.players_per_team %></h4>
+    <h4>Draft Time: <%= format_draft_date(@league) %> (US Pacific Time)</h4>
+  </div>
+  
+  <div>
+    <a href="#joinModal" class="btn btn-primary" data-toggle="modal">Join this League</a>
+  </div>
+  
+  <div>
+    <h3>League Standings</h3>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Team Name</th>
+          <th>Total Points</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @standings.each_with_index do |team, index| %>
+        <tr>
+          <td><%= (index+1).ordinalize %></td>
+          <td><%= team.name %></td>
+          <td><%= team.total_points %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+  
+</div>
+
+<div id="joinModal" class="modal hide fade" role="dialog">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3>Join the League: <%= @league.name %></h3>
+  </div>
+  <div class="modal-body">
+    <%= form_tag league_teams_path(@league) do %>
+      <table>
+        <tr>
+          <td><%= label_tag :name, "Team Name" %></td>
+          <td><%= text_field_tag :name %></td>
+        </tr>
+      </table>
+      <%= submit_tag "Create Team", :class => "btn btn-primary" %>
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <% end %>
+  </div>
+</div>
