--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -12,11 +12,10 @@
     <tbody>
       <% @all_leagues.each do |league| %>
         <tr>
-          <td><%= league.name %></td>
+          <td><%= link_to league.name, league_path(league) %></td>
           <td><%= format_draft_date(league) %></td>
           <td><%= league.teams.count %> / <%= league.num_teams %></td>
           <td><%= league.players_per_team %></td>
-          <td><%= link_to "Join", league_path(league), :class => "btn" %></td>
         </tr>
       <% end %>
     </tbody>
