--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,4 @@
-<div>
-  <%= link_to "Logout", sessions_signout_path, :method => :post, :class => ["right", "btn"] %>
-</div>
+<%= render 'shared/navbar' %>
 
 <div class="centered", style="clear: right;">
   <%= link_to "Join a League", leagues_path, :class => "btn" %>
