Add faye and knockoutjs to the project. Start working on the draft page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>FantasyTennis</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "/faye.js" %>
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
