--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="middle">
-  <div>
+  <div class="column">
     <h2>Current Player</h2>
     <table>
       <tr>
@@ -9,12 +9,21 @@
       </tr>
     </table>
     
-
-    $ <input type="number" style="width: 100px;" min="0" data-bind="value: start_bid"/><br/>
+    <table>
+      <tr>
+        <td><label for="bid_input">$</label></td>
+        <td><input id="bid_input" type="number" style="width: 100px;" min="0" data-bind="value: start_bid, attr: { min: start_bid }"/></td>
+      </tr>
+    </table>
+    
     <button id="bid" class="btn btn-large btn-primary">Bid Now</button>
   </div>
   
-  <div class="column scrollbar">
+  <div class="timer">
+    <h1 data-bind="text: seconds_format">Time: 10</h3>
+  </div>
+  
+  <div class="column scrollbar middle" style="clear: left;">
     <table class="table-hover table">
       <thead>
         <tr>
@@ -38,7 +47,8 @@
   </div>
   
   <div class="column">
-    <h3>My Team</h3>
+    <h4>My Team</h4>
+    <h3 id="team_name"><%= @team.name %></h3>
     <table class="table table-hover table-bordered" style="width: 200px;">
       <tbody>
         <% for index in 0..@league.players_per_team-1 %>
