--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -20,7 +20,7 @@
   </div>
   
   <div class="timer">
-    <h1 data-bind="text: seconds_format">Time: 10</h3>
+    <h1 data-bind="text: seconds_format, css: { timer_low: seconds() < 6 }">Time: 10</h3>
   </div>
   
   <div class="column scrollbar middle" style="clear: left;">
