--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,4 +1,19 @@
 <div class="middle">
+  <div>
+    <ul class="inline">
+      <% @draft_order.each do |team| %>
+        <li class="selected">
+          <h4><%= team.name %></h4>
+          <% if team == @team %>
+            <p>(Your Team)<p>
+          <% else %>
+            <p></p>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  
   <div class="column">
     <h2>Current Player</h2>
     <table>
@@ -16,7 +31,7 @@
       </tr>
     </table>
     
-    <button id="bid" class="btn btn-large btn-primary">Bid Now</button>
+    <button id="bid" class="btn btn-large btn-primary" data-bind="css: { disabled: !can_bid() }, attr: { disabled: !can_bid() }">Bid Now</button>
   </div>
   
   <div class="timer">
@@ -47,6 +62,8 @@
   </div>
   
   <div class="column">
+    <h3>Remaining: $200</h3>
+    
     <h4>My Team</h4>
     <h3 id="team_name"><%= @team.name %></h3>
     <table class="table table-hover table-bordered" style="width: 200px;">
