Added draft model. Subtract remaining money in draft

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -55,7 +55,7 @@
   </div>
   
   <div class="column">
-    <h3>Remaining: $200</h3>
+    <h3 data-bind="text: money_format"></h3>
     
     <h4>My Team</h4>
     <h3 id="team_name"><%= @team.name %></h3>
