Create a server-side faye client. Store the state of the draft in the database.

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -64,5 +64,12 @@
     </table>
     
   </div>
-  
 </div>
+
+<script type="text/javascript">
+  $(function() {
+    viewModel.current_player("<%= @draft.player %>")
+    viewModel.bid("<%= @draft.bid %>")
+    viewModel.current_team("<%= @draft.current_team.name %>")
+  });
+</script>
