Keep track of when teams can nominate players

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -71,5 +71,6 @@
     viewModel.current_player("<%= @draft.player %>")
     viewModel.bid("<%= @draft.bid %>")
     viewModel.current_team("<%= @draft.current_team.name %>")
+    viewModel.nominator("<%= @draft.nominator.name %>")
   });
 </script>
