Improving the draft

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -68,9 +68,10 @@
 
 <script type="text/javascript">
   $(function() {
-    viewModel.current_player("<%= @draft.player %>")
-    viewModel.bid("<%= @draft.bid %>")
-    viewModel.current_team("<%= @draft.current_team.name %>")
-    viewModel.nominator("<%= @draft.nominator.name %>")
+    viewModel.current_player("<%= @draft.player %>");
+    viewModel.bid("<%= @draft.bid %>");
+    viewModel.current_team("<%= @draft.current_team.name %>");
+    viewModel.nominator("<%= @draft.nominator.name %>");
+    viewModel.hide_nominate();
   });
 </script>
