Automatically nominate highest ranked player when time runs out. Check for max bid

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -27,7 +27,7 @@
     <table>
       <tr>
         <td><label for="bid_input">$</label></td>
-        <td><input id="bid_input" type="number" style="width: 100px;" min="0" data-bind="value: start_bid, attr: { min: start_bid }"/></td>
+        <td><input id="bid_input" type="number" style="width: 100px;" min="0" data-bind="value: start_bid, attr: { min: start_bid, max: money }"/></td>
       </tr>
     </table>
     
