--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <div class="centered">
-  <h1>Fantasy Tennis</h1>
+  <h1>Welcome to Fantasy Tennis</h1>
+  <p>Join or create a league, build your team, and compete to be the best in your league. Participate in a live auction draft, to form your team. The goal is simple. Get the most ATP World Tour points possible. Add and drop players over the course of the season. Follow your favorite players on the tour, and have fun playing Fantasy Tennis.</p>
+
   <%= link_to "Sign In", sessions_signin_path, :class => "btn"%> or
   <%= link_to "Sign Up for Free", new_user_path, :class => "btn" %>
 </div>
