--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,18 @@
       <%= link_to "Fantasy Tennis", '/', :class => "brand" %>
       <ul class="nav">
         <li><%= link_to "Home", '/' %></li>
+        
         <% if current_user.present? %>
+          <li class="dropdown">
+            <%= link_to "#", :class => "dropdown-toggle", :data => {:toggle => "dropdown"} do %>
+               My Teams<strong class="caret"></strong>
+            <% end %>
+            <ul class="dropdown-menu">
+              <% current_user.teams.each do |team| %>
+                <li><%= link_to team.name, league_team_path(team.league, team) %></li>
+              <% end %>
+            </ul>
+          </li>
           <li><%= link_to "Logout", sessions_signout_path, :method => :post %></li>
         <% end %>
       </ul>
